Minor changes, including adding margin: 0 to body

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
 
     <footer>
-        <p>Copyright The Odin Project 2024</p>
+        <p class="footerp" >Copyright The Odin Project 2024</p>
     </footer>
 
 
